// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filters-form Renders \`filters-form\` with custom props 1`] = `
<div>
  <c-draggable-list-field-stub
    component="v-list"
    value="[object Object],[object Object]"
  >
    <filter-tile-stub
      editable="true"
      filter="[object Object]"
    />
    <filter-tile-stub
      editable="true"
      filter="[object Object]"
    />
  </c-draggable-list-field-stub>
  <button
    class="ml-0 v-btn v-btn--outline v-btn--depressed theme--light primary--text"
    type="button"
  >
    <div
      class="v-btn__content"
    >
      common.addFilter
    </div>
  </button>
</div>
`;

exports[`filters-form Renders \`filters-form\` with default props 1`] = `
<div>
  <div
    class="v-alert info"
  >
    <i
      aria-hidden="true"
      class="v-icon material-icons theme--light v-alert__icon"
    >
      info
    </i>
    <div>
      modals.filter.emptyFilters
    </div>
  </div>
  <button
    class="ml-0 v-btn v-btn--outline v-btn--depressed theme--light primary--text"
    type="button"
  >
    <div
      class="v-btn__content"
    >
      common.addFilter
    </div>
  </button>
</div>
`;
